main.py 90% commented and finished...for now

--- a/console.kv
+++ b/console.kv
@@ -164,16 +164,16 @@
 
 
 
-MDBoxLayout:
+BoxLayout:
     orientation: 'vertical'
 
     canvas.before:
-        Color:
-            rgb: 0,0,0
+#        Color:
+#            rgb: 0,0,0
         Rectangle:
             pos: self.pos
             size: self.size
-            #source: 'assets/bg.png'
+            source: 'assets/bg.png'
 
 
     MDBoxLayout
