transfer back to mac

--- a/console.kv
+++ b/console.kv
@@ -2,14 +2,17 @@
     multiline: False
     font_size: 12.8
     halign: 'center'
+
     write_tab: False
+    padding: [0,3,0,0]
 
 <AutoTIFreq@TextInput>
     multiline: False
     font_size: 12.8
     halign: 'center'
-    write_tab: False
 
+    write_tab: False
+    padding: [0,3,0,0]
 
 
 <Automate@MDBoxLayout>
@@ -222,6 +225,7 @@ BoxLayout:
 
 
     # Split the screen in three
+
     MDBoxLayout
 
         # Left pane / buttons
@@ -306,7 +310,7 @@ BoxLayout:
                     width: 80
                     Label
                         text: 'freq:'
-#                        font_size: 14
+
 
                     TextInput
                         id: repeat_in_seconds_gb
@@ -363,7 +367,7 @@ BoxLayout:
                     width: 80
                     Label
                         text: 'freq:'
-#                        font_size: 14
+
 
                     TextInput
                         id: repeat_in_seconds_lk
@@ -449,7 +453,7 @@ BoxLayout:
                     width: 80
                     Label
                         text: 'freq:'
-#                        font_size: 14
+
 
                     TextInput
                         id: repeat_in_seconds_tm
@@ -537,7 +541,7 @@ BoxLayout:
                     width: 80
                     Label
                         text: 'freq:'
-#                        font_size: 14
+
 
                     TextInput
                         id: repeat_in_seconds_lw
@@ -623,7 +627,7 @@ BoxLayout:
                     width: 80
                     Label
                         text: 'freq:'
-#                        font_size: 14
+
 
                     TextInput
                         id: repeat_in_seconds_cs
