FTP update, more exceptions fail-safes added, max errors Logs enabled

--- a/console.kv
+++ b/console.kv
@@ -127,6 +127,7 @@
             text: '300'
 #            on_text: app.automation[root.tag][3]['freq'] = self.text
 #            on_text: print(app.automation)
+#            on_text: prSwint(app.automation)
         Widget
             size_hint_x: .1
 
